--- a/app/src/main/res/layout/activity_authorization_screen.xml
+++ b/app/src/main/res/layout/activity_authorization_screen.xml
@@ -1,4 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_app"
@@ -9,28 +11,107 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Вхід"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="129dp" />
 
     <EditText
-        android:id="@+id/editTextUsername"
+        android:id="@+id/editTextPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your username"
-        android:inputType="text" />
+        android:hint="Телефон"
+        android:inputType="text"
+        android:textColorHint="@color/text_main"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="201dp" />
 
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your password"
-        android:inputType="textPassword" />
+        android:hint="Пароль"
+        android:inputType="textPassword"
+        android:textColorHint="@color/text_main"
+        tools:layout_editor_absoluteX="14dp"
+        tools:layout_editor_absoluteY="288dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <RadioButton
+            android:id="@+id/radioButtonRememberMe"
+            android:layout_width="187dp"
+            android:layout_height="37dp"
+            android:text="Запам'ятати мене"
+            android:textColor="@color/text_another"
+            tools:layout_editor_absoluteX="-3dp"
+            tools:layout_editor_absoluteY="347dp" />
+
+        <Button
+            android:id="@+id/buttonForgotPassword"
+            android:layout_width="158dp"
+            android:layout_height="37dp"
+            android:background="@android:color/transparent"
+            android:text="Забули пароль?"
+            android:textAllCaps="false"
+            tools:layout_editor_absoluteX="226dp"
+            tools:layout_editor_absoluteY="347dp" />
+
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Логін"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        tools:layout_editor_absoluteX="21dp" />
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:paddingHorizontal="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/textViewSignUp"
+            android:layout_width="124dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:text="Немає аккаунту?"
+            android:textAlignment="textEnd"
+            android:textAllCaps="false"
+            android:textColor="@color/text_main"
+            android:textSize="12sp"
+            android:textStyle="normal"
+            tools:ignore="RtlCompat" />
+
+        <Button
+            android:id="@+id/buttonSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:text="Зареєструватися"
+            android:textAllCaps="false"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
