--- a/app/src/main/res/layout/activity_home_menu.xml
+++ b/app/src/main/res/layout/activity_home_menu.xml
@@ -1,35 +1,109 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_app"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
+    <!--    Top Bar    -->
+    <Button
+        android:id="@+id/buttonClose"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="311dp"
+        android:background="@drawable/close"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/white" />
+
+    <!--    Top Bar    -->
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home Menu"
+        android:id="@+id/textView"
+        android:layout_width="67dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="96dp"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/buttonProfile"
+        app:layout_constraintStart_toEndOf="@+id/buttonClose"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!--    Top Bar    -->
     <Button
-        android:id="@+id/buttonViewPhotos"
+        android:id="@+id/buttonProfile"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="311dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="21dp"
+        android:background="@drawable/profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!--    Catalog    -->
+    <LinearLayout
+        android:id="@+id/linearLayoutCatalog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View Photos" />
+        android:layout_marginTop="246dp"
+        android:orientation="vertical"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonProfile">
 
-    <Button
-        android:id="@+id/buttonViewVideos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View Videos" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="23dp"
+            android:text="Menu"
+            android:textAlignment="textStart"
+            android:textColor="@color/text_main"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/buttonSettings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Settings" />
+        <Button
+            android:id="@+id/buttonCatalog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/catalog"
+            app:strokeColor="@color/white" />
 
-</LinearLayout>
+    </LinearLayout>
+
+    <!--    Bottom Bar    -->
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="360dp"
+        android:layout_height="80dp"
+        android:background="@drawable/bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <Button
+            android:id="@+id/buttonHome"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/home"
+            app:strokeColor="@color/white" />
+
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
