--- a/app/src/main/res/layout/activity_home_menu.xml
+++ b/app/src/main/res/layout/activity_home_menu.xml
@@ -56,13 +56,13 @@
         android:id="@+id/linearLayoutCatalog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="246dp"
         android:orientation="vertical"
         android:padding="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonProfile">
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <TextView
             android:layout_width="match_parent"
@@ -100,8 +100,7 @@
             android:id="@+id/buttonHome"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:background="@drawable/home"
-            app:strokeColor="@color/white" />
+            android:background="@drawable/home" />
 
     </LinearLayout>
 
