--- a/app/src/main/res/layout/activity_home_menu.xml
+++ b/app/src/main/res/layout/activity_home_menu.xml
@@ -102,7 +102,8 @@
             android:layout_height="20dp"
             android:layout_weight="1"
             android:layout_margin="25dp"
-            android:background="@drawable/home"/>
+            android:background="@drawable/home"
+            android:backgroundTint="@color/text_main"/>
 
         <Button
             android:id="@+id/buttonUnion"
