--- a/app/src/main/res/layout/activity_logout.xml
+++ b/app/src/main/res/layout/activity_logout.xml
@@ -37,10 +37,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:background="#706E6E"
-
-            android:text="No"
-            android:textColor="@color/white" />
+            android:backgroundTint="@color/button_background_color"
+            android:textColor="@color/button_text_color"
+            android:text="No" />
 
         <Button
             android:id="@+id/buttonYes"
@@ -48,9 +47,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginStart="10dp"
-            android:background="@color/green"
-            android:text="Yes"
-            android:textColor="@color/white" />
+            android:backgroundTint="@color/button_background_color"
+            android:textColor="@color/button_text_color"
+            android:text="Yes" />
 
 
     </LinearLayout>
