--- a/app/src/main/res/color/button_text_color.xml
+++ b/app/src/main/res/color/button_text_color.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--When the button is not enabled-->
-    <item android:state_enabled="false" android:color="@color/text_main" />
+    <item android:state_enabled="false" android:color="@color/grey" />
     <!--When button is enabled-->
     <item android:state_selected="true" android:color="@color/green" />
     <!--Default Text Color-->
