--- a/app/src/main/res/layout/activity_authorization_screen.xml
+++ b/app/src/main/res/layout/activity_authorization_screen.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="60dp"
         android:hint="Телефон"
         android:inputType="text"
-        android:textColorHint="@color/text_main"
+        android:textColorHint="@color/grey"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="16dp" />
 
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:hint="Пароль"
         android:inputType="textPassword"
-        android:textColorHint="@color/text_main"
+        android:textColorHint="@color/grey"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
         tools:layout_editor_absoluteX="14dp" />
 
@@ -55,7 +55,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Запам'ятати мене"
-            android:textColor="@color/text_another" />
+            android:textColor="@color/green" />
 
         <Button
             android:id="@+id/buttonForgotPassword"
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Ця версія додатку застаріла"
-        android:textColor="@color/text_main"
+        android:textColor="@color/grey"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +97,7 @@
         android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
         android:text="Оновити зараз!"
-        android:textColor="@color/text_another"
+        android:textColor="@color/green"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
             android:gravity="center"
             android:text="Немає аккаунту?"
             android:textAllCaps="false"
-            android:textColor="@color/text_main"
+            android:textColor="@color/grey"
             android:textSize="12sp"
             android:textStyle="normal"
             tools:ignore="RtlCompat" />
