--- a/app/src/main/res/layout/activity_catalog_brands.xml
+++ b/app/src/main/res/layout/activity_catalog_brands.xml
@@ -1,9 +1,158 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CatalogBrandsActivity">
+    android:background="@color/background_app"
+    android:orientation="vertical"
+    android:layout_gravity="center_horizontal">
+
+    <!--    Top Bar    -->
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Каталог брендів"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!--    Brands    -->
+
+
+    <!--    Bottom Bar    -->
+    <LinearLayout
+        android:id="@+id/constraintLayoutBottom"
+        android:layout_width="360dp"
+        android:layout_height="80dp"
+        android:background="@drawable/bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:layout_margin="25dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <View
+                android:id="@+id/viewHome"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/home"/>
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="3dp"
+                android:background="@drawable/ellipse"
+                android:backgroundTint="@android:color/transparent"
+                android:layout_margin="3dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:layout_margin="25dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <View
+                android:id="@+id/viewUnion"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/union"
+                android:backgroundTint="@color/green" />
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="3dp"
+                android:background="@drawable/ellipse"
+                android:backgroundTint="@color/green"
+                android:layout_margin="3dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:layout_margin="25dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <View
+                android:id="@+id/viewCoins"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/coins" />
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="3dp"
+                android:background="@drawable/ellipse"
+                android:backgroundTint="@android:color/transparent"
+                android:layout_margin="3dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:layout_margin="25dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <View
+                android:id="@+id/viewSupport"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/support"/>
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="3dp"
+                android:background="@drawable/ellipse"
+                android:backgroundTint="@android:color/transparent"
+                android:layout_margin="3dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:layout_margin="25dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <View
+                android:id="@+id/viewSettings"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/settings" />
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="3dp"
+                android:background="@drawable/ellipse"
+                android:backgroundTint="@android:color/transparent"
+                android:layout_margin="3dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
