--- a/app/src/main/res/layout/activity_catalog_brands.xml
+++ b/app/src/main/res/layout/activity_catalog_brands.xml
@@ -15,13 +15,86 @@
         android:gravity="center"
         android:text="Каталог брендів"
         android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginTop="25dp"
+        android:textSize="20sp"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--    Brands    -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutBottom"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="14dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="117dp"
+                android:layout_height="117dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/apple" />
+
+            <ImageButton
+                android:layout_width="117dp"
+                android:layout_height="117dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/samsung" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="117dp"
+                android:layout_height="117dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/huawei" />
+
+            <ImageButton
+                android:layout_width="117dp"
+                android:layout_height="117dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/xiaomi" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="117dp"
+                android:layout_height="117dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/hp" />
+
+            <ImageButton
+                android:layout_width="117dp"
+                android:layout_height="117dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/acer" />
+
+        </LinearLayout>
+    </LinearLayout>
 
     <!--    Bottom Bar    -->
     <LinearLayout
