--- a/app/src/main/res/layout/activity_catalog_brands.xml
+++ b/app/src/main/res/layout/activity_catalog_brands.xml
@@ -36,6 +36,7 @@
             android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/imageButtonApple"
                 android:layout_width="117dp"
                 android:layout_height="117dp"
                 android:layout_margin="20dp"
@@ -43,6 +44,7 @@
                 android:background="@drawable/apple" />
 
             <ImageButton
+                android:id="@+id/imageButtonSamsung"
                 android:layout_width="117dp"
                 android:layout_height="117dp"
                 android:layout_margin="20dp"
@@ -58,6 +60,7 @@
             android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/imageButtonHuawei"
                 android:layout_width="117dp"
                 android:layout_height="117dp"
                 android:layout_margin="20dp"
@@ -65,6 +68,7 @@
                 android:background="@drawable/huawei" />
 
             <ImageButton
+                android:id="@+id/imageButtonXiaomi"
                 android:layout_width="117dp"
                 android:layout_height="117dp"
                 android:layout_margin="20dp"
@@ -80,6 +84,7 @@
             android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/imageButtonHp"
                 android:layout_width="117dp"
                 android:layout_height="117dp"
                 android:layout_margin="20dp"
@@ -87,6 +92,7 @@
                 android:background="@drawable/hp" />
 
             <ImageButton
+                android:id="@+id/imageButtonAcer"
                 android:layout_width="117dp"
                 android:layout_height="117dp"
                 android:layout_margin="20dp"
