--- a/app/src/main/res/layout/activity_logout.xml
+++ b/app/src/main/res/layout/activity_logout.xml
@@ -29,8 +29,6 @@
         app:layout_constraintTop_toBottomOf="@id/textView"
         tools:layout_editor_absoluteX="16dp">
 
-        <!-- TODO this button background -->
-        <!-- TODO all buttons corner radius -->
         <Button
             android:id="@+id/buttonNo"
             android:layout_width="match_parent"
@@ -38,18 +36,20 @@
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:backgroundTint="@color/button_background_color"
-            android:textColor="@color/button_text_color"
-            android:text="No" />
+            android:text="Ні"
+            android:textAllCaps="false"
+            android:textColor="@color/button_text_color" />
 
         <Button
             android:id="@+id/buttonYes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="10dp"
+            android:layout_weight="1"
             android:backgroundTint="@color/button_background_color"
-            android:textColor="@color/button_text_color"
-            android:text="Yes" />
+            android:text="Так"
+            android:textAllCaps="false"
+            android:textColor="@color/button_text_color" />
 
 
     </LinearLayout>
