--- a/app/src/main/res/layout/activity_initialize_screen.xml
+++ b/app/src/main/res/layout/activity_initialize_screen.xml
@@ -5,11 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/app_initialize_screen"
-    tools:context=".SplashScreenActivity">
+    android:background="@color/background_app"
+    tools:context=".InitializeScreenActivity">
 
     <ImageView
-        android:id="@+id/SplashScreenImage"
+        android:id="@+id/image_view_background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/app_initialize_screen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/image_view_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon"
