--- a/app/src/main/res/layout/activity_catalog_brands.xml
+++ b/app/src/main/res/layout/activity_catalog_brands.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.CutOn"
     android:background="@color/background_app"
     android:orientation="vertical"
     android:layout_gravity="center_horizontal">
