--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!--Create a new style and name it splashScreenTheme and add the following code-->
-    <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_image</item>
-        <item name="android:statusBarColor">@color/black</item>
-    </style>
-
     <!-- Base application theme. -->
     <style name="Theme.CutOn" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
@@ -18,7 +12,9 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
 
+        <!-- Customize your theme here. -->
+        <item name="android:windowDisablePreview">true</item>
+
+    </style>
 </resources>
