--- a/app/src/main/res/layout/activity_authorization_screen.xml
+++ b/app/src/main/res/layout/activity_authorization_screen.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:hint="+380501234567"
+        android:hint="Логін"
         android:inputType="text"
         android:textColorHint="@color/grey"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -36,7 +36,7 @@
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="123456"
+        android:hint="Пароль"
         android:inputType="textPassword"
         android:textColorHint="@color/grey"
         app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
