--- a/app/src/main/res/layout/activity_authorization_screen.xml
+++ b/app/src/main/res/layout/activity_authorization_screen.xml
@@ -29,6 +29,7 @@
         android:hint="Логін"
         android:inputType="text"
         android:textColorHint="@color/grey"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="16dp" />
 
@@ -39,6 +40,7 @@
         android:hint="Пароль"
         android:inputType="textPassword"
         android:textColorHint="@color/grey"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
         tools:layout_editor_absoluteX="14dp" />
 
