--- a/app/src/main/res/layout/activity_home_menu.xml
+++ b/app/src/main/res/layout/activity_home_menu.xml
@@ -87,7 +87,7 @@
     <!--    Bottom Bar    -->
     <LinearLayout
         android:id="@+id/constraintLayoutBottom"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@drawable/bottom"
         app:layout_constraintBottom_toBottomOf="parent"
