--- a/app/src/main/res/layout/brand_item.xml
+++ b/app/src/main/res/layout/brand_item.xml
@@ -27,8 +27,9 @@
             <ImageView
                 android:id="@+id/iv_logo_brand"
                 android:layout_width="117dp"
-                android:layout_height="85dp"
-                android:layout_gravity="center" />
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:padding="15dp"/>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -39,11 +40,12 @@
                 android:id="@+id/tv_name_brand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
                 android:gravity="center"
                 android:text="Name Brand"
                 android:textColor="@color/white"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginTop="5dp" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
